apps/microservice/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservice
  labels:
    app.kubernetes.io/part-of: gke-gitops-demo
